@@ -19,6 +19,9 @@
    - Implemented a service to list clients registered by a user (margaretha, 
      close #52)
    - Added a check for OAuth2 client, VC, and group name length (margaretha)
+15/11/2019
+   - Merged list authorized client and list registered client services
+     (margaretha)
 
 # version 0.62.1
 08/07/2019
